<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryInverse"

    >


    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/bank_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/select_bank_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/select_open_bank"
                android:padding="5dp"
                android:textSize="@dimen/sp_16"

                />

            <TextView
                android:id="@+id/bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"

                android:layout_centerHorizontal="true"

                android:text="@string/guangda"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/bank_select"
            android:background="@color/myaccount_title" />

        <RelativeLayout
            android:id="@+id/bank_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="10dp"
            >

            <TextView
                android:id="@+id/bank_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"


                android:text="@string/bank_name"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edit_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingRight="10dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/sh_edittext"
                android:layout_toRightOf="@+id/bank_name_tv"
                android:hint="@string/input_real_bank_name" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/bank_name_layout"
            android:background="@color/myaccount_title" />

        <RelativeLayout
            android:id="@+id/real_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/real_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"


                android:text="@string/real_name"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/real_edit_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_edittext"
                android:layout_alignParentTop="true"

                android:layout_toRightOf="@+id/real_name_tv"
                android:hint="@string/real_name" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/real_name_layout"
            android:background="@color/myaccount_title" />
        <RelativeLayout
            android:id="@+id/bank_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/bank_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"


                android:text="@string/bind_bank_card_number"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/bank_number_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_edittext"
                android:layout_alignParentTop="true"

                android:layout_toRightOf="@+id/bank_number_tv"
                android:hint="@string/bind_bank_card_number_hint" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/bank_number_layout"
            android:background="@color/myaccount_title" />
        <RelativeLayout
            android:id="@+id/confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/confirm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"


                android:text="@string/input_confirm_bank_number"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/confirm_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_edittext"
                android:layout_alignParentTop="true"

                android:layout_toRightOf="@+id/confirm_tv"
                android:hint="@string/input_confirm_bank_number" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/confirm_layout"
            android:background="@color/myaccount_title" />
        <RelativeLayout
            android:id="@+id/funds_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            >

            <TextView
                android:id="@+id/funds_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"


                android:text="@string/title_fund_password"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/funds_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:padding="5dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/sh_edittext"
                android:layout_toRightOf="@+id/funds_tv"
                android:hint="@string/input_funds_password" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/funds_layout"
            android:background="@color/myaccount_title" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_bt"
            android:padding="5dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/myaccount_title"
            android:text="@string/submit_bind"
            android:background="@drawable/sh_exit_login"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notice_tv"
            android:padding="5dp"

            android:textSize="16sp"


            android:text="@string/operate_notice"

            />

    </LinearLayout>


</RelativeLayout>
