<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account" />

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:textColor="@color/red_mine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/old_password" />

        <EditText
            android:id="@+id/etOldPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/please_input_old_password"
            android:inputType="textPassword"
            android:maxLength="24"
            android:maxLines="1"
            android:paddingRight="@dimen/dp_8"
            android:textSize="@dimen/text_normal" />

        <ImageButton
            android:id="@+id/imgCurEye"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@drawable/eye_selector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/etNewPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/please_input_new_password"
            android:inputType="textPassword"
            android:maxLength="24"
            android:paddingRight="@dimen/dp_8"
            android:textSize="@dimen/text_normal" />

        <ImageButton
            android:id="@+id/imgNewEye"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@drawable/eye_selector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/right_password" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/please_input_password_agame"
            android:inputType="textPassword"
            android:maxLength="24"
            android:paddingRight="@dimen/dp_8"
            android:textSize="@dimen/text_normal" />

        <ImageButton
            android:id="@+id/imgAgainEye"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@drawable/eye_selector" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/button_sure_selector"
        android:enabled="false"
        android:text="@string/sure"
        android:textColor="@color/white" />

</LinearLayout>